test/must_fail/api/must_fail_hint_args_number.ngjs
#!/usr/bin/env ngspicejs
// string arg needed
// linter: ngspicejs-lint
"use strict";

hint(123);

